
* Fixed ``AssertionError`` when accessing smart servers running Bazaar
  versions before 1.6.
  (Andrew Bennetts, #528041)

* Improved progress bar for fetch (2a format only). Bazaar now shows an
  estimate of the number of records to be fetched vs actually fetched.
  (Parth Malwankar, #374740, #538868)

* Reduce peak memory by one copy of compressed text.
  (John Arbash Meinel, #566940)

* Selftest was failing with testtools 0.9.3, which caused an
  AssertionError raised from a cleanUp to be reported as a Failure, not an
  Error, breaking on of our test hygiene tests.
  (Robert Collins, Vincent Ladeuil).

* ``set_user_option`` with a dict on remote branches no longer fails with
  an AttributeError.  There is a new ``Branch.set_config_option_dict`` RPC
  to support this efficiently.
  (Andrew Bennetts, #430382)
  
* Show the filenames when a file rename fails so that the error will be
  more comprehensible.
  (Martin Pool, #491763)

* Unicode characters in aliases are now handled correctly and do not cause
  UnicodeEncodeError exception. (Parth Malwankar, #529930)

* Unicode commit messages that are the same as a file name no longer cause
  UnicodeEncodeError. ``ui.text.show_warning`` now handles unicode
  messages.
  (Parth Malwankar, #563646)

* Using bzr with `lp:` urls behind an http proxy should work.
  (Robert Collins, #558343)

Improvements
************

* ``append_revisions_only`` will now be interpreted as a boolean and a
  warning emitted if illegal values are used. Note that for projects
  that needs to maintain compatibility with previsous bzr versions,
  only 'True' and 'False' strings must be used (previous versions of
  bzr will interpret all strings differing from 'True'
  (case-sensitive) as false.
  (Brian de Alwis, Vincent Ladeuil)

* ``bzr ls`` now supports short options for existing long options.
  ``-k/--kind``, ``-i/--ignored``, ``-u/--unknown`` and ``-0/--null``.
  (Parth Malwankar, #181124)
